v{ModVersion} has been published to {tMLBuildPurpose} tML v{tMLVersion}.
Learn more at the [url={ModHomepage}]homepage[/url]

TBD

* FIXES:
    * Fixed Young Harpy being damageable even with Guide to Critter Companionship active

* CHANGES:
    * Changed Animated Tome, Chunky, Meatball, Horned Slime, Ocean Slime, Sting Slime, Turtle Slime to be actual critters with 5 health and 0 damage